# image-format-converter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  使用说明.md
app/: __init__.py  main.py
app/gui/: main_window.py  settings_dialog.py  theme.py
app/gui/widgets/: __init__.py  file_list_widget.py
app/models/: settings.py  task.py
app/services/: __init__.py  conversion_worker.py  converter.py  file_scanner.py  preview_service.py  settings_service.py
app/utils/: exceptions.py  image_info.py  logger.py  paths.py
config/: default_settings.json
tests/: test_converter.py  test_image_info.py  test_logger.py
