[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-format-converter"
version = "0.1.0"
description = "Windows-friendly desktop tool for converting image formats in bulk."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.4.0,<12.0.0",
  "PySide6>=6.8.0,<6.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pyinstaller>=6.11.0,<7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
